--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,16 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="main">
+        <header>
+            <h1>WeatherPulse</h1>
+            <div class="search"> <img src="img/search.png" alt="searchIcon"><input type="search" id="input"
+                    placeholder="Search city"></div>
+        </header>
+    </section>
+
 </body>
+
 </html>
