--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherPulse</title>
-    <script src="config.js"></script>
+    <script src="config.js" defer></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,8 +17,11 @@
             <div class="search"> <img src="img/search.png" alt="searchIcon"><input type="search" id="input"
                     placeholder="Search city"></div>
         </header>
-    </section>
+        <div class="card-container">
 
+        </div>
+
+    </section>
 </body>
 
 </html>
