--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <div class="search"> <img src="img/search.png" alt="searchIcon"><input type="search" id="input"
                     placeholder="Search city"></div>
         </header>
-        <div class="card-container">
+        <div class="card-container" id="container">
+            <div class="card-content">
+                <div class="temperature"><img id="weatherIcon"><span class="temp">31.2 </span></div>
+                <span class="city">Neuss, DE</span>
+             <div class="date-time"><span>Freitag 06.12.2024 </span> <span>8:45 Uhr</span></div>
+            </div>
 
         </div>
 
