--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WeatherPulse</title>
     <script src="config.js" defer></script>
     <script src="script.js"></script>
+    <script src="template.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,12 +19,6 @@
                     placeholder="Search city"></div>
         </header>
         <div class="card-container" id="container">
-            <div class="card-content">
-                <div class="temperature"><img id="weatherIcon"><span class="temp">31.2 </span></div>
-                <span class="city">Neuss, DE</span>
-             <div class="date-time"><span>Freitag 06.12.2024 </span> <span>8:45 Uhr</span></div>
-            </div>
-
         </div>
 
     </section>
