added forecast cards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
             <div class="search"> <img src="img/search.png" alt="searchIcon"><input type="search" id="input"
                     placeholder="Search city"></div>
         </header>
-        <div class="card-container" id="container">
+        <div class="main-content-cards">
+            <div class="card-container" id="container"></div>
+            <div class="forecast-container" id="forecastContainer">
+                <div class="fore-card">
+                    <h4>Monday</h4>
+                    <img src="" id="forecastIcon">
+                    <span class="fore-temp">31 &deg;C</span>
+                </div>
+            </div>
         </div>
 
     </section>
