--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherPulse</title>
-    <script src="template.js" defer></script>
-    <script src="config.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="template.js" ></script>
+    <script src="config.js" ></script>
+    <script src="script.js" ></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="main">
+    <section class="main" id="main">
         <header>
             <h1>WeatherPulse</h1>
             <div class="search"> <img src="img/search.png" alt="searchIcon"><input type="search" id="input"
@@ -21,11 +21,6 @@
         <div class="main-content-cards">
             <div class="card-container" id="container"></div>
             <div class="forecast-container" id="forecastContainer">
-                <div class="fore-card">
-                    <h4>Monday</h4>
-                    <img src="" id="forecastIcon">
-                    <span class="fore-temp">31 &deg;C</span>
-                </div>
             </div>
         </div>
 
