added search function for locations

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherPulse</title>
-    <script src="template.js" ></script>
-    <script src="config.js" ></script>
-    <script src="script.js" ></script>
+    <script src="template.js"></script>
+    <script src="config.js"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,7 +16,7 @@
         <header>
             <h1>WeatherPulse</h1>
             <div class="search"> <img src="img/search.png" alt="searchIcon"><input type="search" id="input"
-                    placeholder="Search city"></div>
+                    placeholder="Search city"><button onclick="searchForLocation()">Search</button></div>
         </header>
         <div class="main-content-cards">
             <div class="card-container" id="container"></div>
